--- a/codefresh.yml
+++ b/codefresh.yml
@@ -13,4 +13,6 @@ steps:
     services:
       app:
         image: containers101/reactstarterkit:${{CF_BRANCH}}
-    environment_name: 'ENV-${{CF_BRANCH}}'
+      environment_name: 'ENV-${{CF_BRANCH}}'
+      composition_variables:
+        - "CF_BRANCH=${{CF_BRANCH}}"
