--- a/codefresh.yml
+++ b/codefresh.yml
@@ -9,10 +9,10 @@ steps:
   LaunchComposition:
     type: launch-composition
     composition_variables:
-      - CF_BRANCH=${{CF_BRANCH}}
+      - "CF_BRANCH=${{CF_BRANCH}}"
     composition:
-    version: '2'
-    services:
-      app:
-        image: containers101/reactstarterkit:${{CF_BRANCH}}
-      environment_name: 'ENV-${{CF_BRANCH}}'
+      version: '2'
+      services:
+        app:
+          image: containers101/reactstarterkit:${{CF_BRANCH}}
+        environment_name: 'ENV-${{CF_BRANCH}}'
