--- a/codefresh.yml
+++ b/codefresh.yml
@@ -10,9 +10,9 @@ steps:
     type: launch-composition
     composition_variables:
       - "CF_BRANCH=${{CF_BRANCH}}"
+    environment_name: '${{CF_BRANCH}}'
     composition:
       version: '2'
       services:
         app:
           image: containers101/reactstarterkit:${{CF_BRANCH}}
-        environment_name: 'ENV-${{CF_BRANCH}}'
